<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Alexis Ringot, Florian Taurer, Matthias Zeppelzauer.
  ~
  ~ This file is part of SoniTalk Demo app.
  ~
  ~ SoniTalk Demo app is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ SoniTalk Demo app is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with SoniTalk Demo app.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">



            <ImageButton
                android:id="@+id/btnListen"
                android:layout_width="73dp"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_hearing_grey_48"
                app:layout_constraintBottom_toBottomOf="@+id/txtDecodedText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtDecodedText"
                android:contentDescription="@string/receive_button" />



            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="73dp"
                android:layout_height="70dp"
                android:layout_marginEnd="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_volume_up_grey_48dp"
                app:layout_constraintBottom_toBottomOf="@+id/edtSignalText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edtSignalText"
                android:contentDescription="@string/send_button" />

            <Button
                android:id="@+id/btnStop"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="40dp"
                android:text="Stop"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/btnPlay"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edtSignalText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Hallo SoniTalk"
                app:layout_constraintEnd_toStartOf="@+id/btnPlay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:importantForAutofill="no"
                android:hint="@string/edtSignalText_hint"/>

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="88dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/gui_message_title"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnListen" />

            <TextView
                android:id="@+id/txtDecodedText"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_vertical"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnListen"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="139dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo_sonitalk_final"
                tools:layout_editor_absoluteX="0dp"
                android:contentDescription="SoniTalk logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                android:text="@string/section_name_sending"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="80dp"
                android:text="@string/section_name_receiving"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtSignalText" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>